test/corpus/arrays/array1.txt
================================================================================
Arrays Array1 ID=1F1KRQS
================================================================================

/// Expect:
/// - output: "2\n"

fn main() {
    let x = [1, 2, 3]
    println("{}", x[1])
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (array_expression
              (identifier)
              (integer_literal))))))))
