test/corpus/arrays/array_bad2.txt
================================================================================
Arrays Array Bad2 ID=4GFGUAS
================================================================================

/// Expect:
/// - error: "Index must be an integer or a range"

fn main() {
    let x = [1, 2, 3]
    println("{}", x["bob"])
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (array_expression
              (identifier)
              (string_literal))))))))
