test/corpus/arrays/array_pop.txt
================================================================================
Arrays Array Pop ID=2GSVA3R
================================================================================

/// Expect:
/// - output: "3\n"

fn main() {
    mut v = [1, 2, 3]

    let last = v.pop()

    println("{}", last!)
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (let_declaration
        (identifier)
        (call_expression
          (field_expression
            (identifier)
            (field_identifier))
          (arguments)))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (optional_value_expression
              (identifier))))))))
