test/corpus/arrays/array_push.txt
================================================================================
Arrays Array Push ID=5E9QHH4
================================================================================

/// Expect:
/// - output: "9\n8\n7\n6\n5\n4\n3\n2\n1\n0\n"

fn main() {
    mut values = [0; 0]

    for i in 0..10 {
        values.push(i)
    }

    while not values.is_empty() {
        println("{}", values.pop()!)
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)))
      (for_expression
        (identifier)
        (range_expression
          (integer_literal)
          (integer_literal))
        (block
          (call_expression
            (field_expression
              (identifier)
              (field_identifier))
            (arguments
              (argument
                (identifier))))))
      (while_statement
        (logical_expression
          (call_expression
            (field_expression
              (identifier)
              (field_identifier))
            (arguments)))
        (block
          (call_expression
            (identifier)
            (arguments
              (argument
                (string_literal))
              (argument
                (optional_value_expression
                  (call_expression
                    (field_expression
                      (identifier)
                      (field_identifier))
                    (arguments)))))))))))
