test/corpus/arrays/array_shorthand.txt
================================================================================
Arrays shorthand
================================================================================

function make_v() throws -> [String] {
    return ["foo", "bar"]
}

function main() {
    let v: [String] = make_v()
    mut i = 0
    while i < 2 {
        println("{}", v[i])
        ++i
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (throws_specifier)
    (array_type
      (primitive_type))
    (block
      (return_statement
        (array_literal
          (string_literal)
          (string_literal)))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (array_type
          (primitive_type))
        (call_expression
          (identifier)
          (arguments)))
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (integer_literal))
      (while_statement
        (binary_expression
          (identifier)
          (integer_literal))
        (block
          (call_expression
            (identifier)
            (arguments
              (string_literal)
              (array_index_expression
                (identifier)
                (identifier))))
          (update_expression
            (identifier)))))))
