test/corpus/arrays/contains.txt
================================================================================
Arrays Contains ID=Y2YSA4U
================================================================================

/// Expect:
/// - output: "true\nfalse\n"

fn main() {
    let arr = ["Well", "Hello", "Friends", "!"]
    println("{}", arr.contains("Hello"))
    println("{}", arr.contains("Goodbye"))
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (array_literal
          (string_literal)
          (string_literal)
          (string_literal)
          (string_literal)))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments
                (argument
                  (string_literal)))))))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments
                (argument
                  (string_literal))))))))))
