test/corpus/arrays/empty_infer_call.txt
================================================================================
Arrays Empty Infer Call ID=2V108LB
================================================================================

/// Expect:
/// - output: "OK\n"

fn test(arr: [f64]) {
    println("OK")
}

fn main() {
    test(arr: [])
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (array_type
          (primitive_type))))
    (block
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (identifier)
        (arguments
          (argument
            (identifier)
            (array_literal)))))))
