test/corpus/arrays/empty_infer_call_bad.txt
================================================================================
Arrays Empty Infer Call Bad ID=CJOJG56
================================================================================

/// Expect:
/// - error: "Type mismatch: expected ‘f64’, but got ‘String’\n"

fn test(arr: [f64]) {
    println("OK")
}

fn main() {
    test(arr: ["bad-type"])
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (array_type
          (primitive_type))))
    (block
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (identifier)
        (arguments
          (argument
            (identifier)
            (array_literal
              (string_literal))))))))
