test/corpus/arrays/inference_empty.txt
================================================================================
Enums inference empty
================================================================================

function main() {
    mut set1: [i64] = []
    set1.push(1)
    set1.push(2)
    mut set2: [[[String]]] = []
    set2.push([["hello"]])
    set2.push([["world"]])
    println("{} {}", set1.size(), set2.size())
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_type
          (primitive_type))
        (array_literal))
      (call_expression
        (field_expression
          (identifier)
          (field_identifier))
        (arguments
          (argument
            (integer_literal))))
      (call_expression
        (field_expression
          (identifier)
          (field_identifier))
        (arguments
          (argument
            (integer_literal))))
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_type
          (array_type
            (array_type
              (primitive_type))))
        (array_literal))
      (call_expression
        (field_expression
          (identifier)
          (field_identifier))
        (arguments
          (argument
            (array_literal
              (array_literal
                (string_literal))))))
      (call_expression
        (field_expression
          (identifier)
          (field_identifier))
        (arguments
          (argument
            (array_literal
              (array_literal
                (string_literal))))))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments)))
          (argument
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments))))))))
