test/corpus/arrays/lvalue.txt
================================================================================
Arrays lvalue
================================================================================

function main() {
    mut x = [1, 2, 3]
    x[1] = 55

    println("{}", x[1])
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (assignment_expression
        (array_expression
          (identifier)
          (integer_literal))
        (integer_literal))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (array_expression
              (identifier)
              (integer_literal))))))))
