test/corpus/arrays/pop_class_instance.txt
================================================================================
Enums pop class instance
================================================================================

class C {
    public message: String
}

function main() {
    mut a: [C] = []
    a.push(C(message: "PASS"))
    println("{}", a.pop()!.message)
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (field_declaration_list
      (field_declaration
        (visibility_specifier)
        (field_identifier)
        (primitive_type))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (array_type
          (type_identifier))
        (array_literal))
      (call_expression
        (field_expression
          (identifier)
          (field_identifier))
        (arguments
          (call_expression
            (identifier)
            (arguments
              (argument
                (identifier)
                (string_literal))))))
      (call_expression
        (identifier)
        (arguments
          (string_literal)
          (field_expression
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments)
              (optional_specifier))
            (field_identifier)))))))
